Articles can be read from the frontend

--- a/frontend/src/app/articles-view/articles-view.component.html
+++ b/frontend/src/app/articles-view/articles-view.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="navigationIndexEndpoint===0">Read articles here.
 <div class="spacer"></div>
+How many posts do we have?
 <div *ngFor="let post of posts">
   <h2>{{post.title}}</h2>
   <p>{{post.content}}</p>
