--- a/frontend/src/app/articles-view/articles-view.component.html
+++ b/frontend/src/app/articles-view/articles-view.component.html
@@ -2,7 +2,9 @@
 <div class="spacer"></div>
 <div *ngFor="let post of posts">
   <h2>{{post.title}}</h2>
-  <p>{{post.content}}</p>
+  <p>{{post.postedDate}}</p>
+  <p>{{post.category}}</p>
+  <p [innerHTML]="post.content"></p>
 </div>
 <app-entry></app-entry>
 <app-entry></app-entry>
