--- a/frontend/src/src/app/app.component.html
+++ b/frontend/src/src/app/app.component.html
@@ -18,8 +18,12 @@
   </li>
 </ul>
 <div class="spacer"></div>
+<div class="mainpage">
+<app-home-view>
+</app-home-view>
 <app-articles-view>
 </app-articles-view>
 <app-downloads-view>
 </app-downloads-view>
+</div>
 
