--- a/frontend/src/src/app/articles-button/articles-button.component.css
+++ b/frontend/src/src/app/articles-button/articles-button.component.css
@@ -7,7 +7,7 @@ button {
   font-size: 100%;
   /*flex: 1;*/
   border: 0px;
-  background-color:lightgrey;
+  background-color: #e9e9ed;
   padding-left: 1%;
   padding-right:1%;
 }
