--- a/frontend/src/src/app/card/card.component.css
+++ b/frontend/src/src/app/card/card.component.css
@@ -1,5 +1,9 @@
 .padding {
   padding:1%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: -0.5%;
+  margin-bottom: -0.5%;
   background-color: #e9e9ed;
   border: 1px lightgray solid;
 }
@@ -21,13 +25,17 @@
   padding-top:1%;
 }
 
-a {
+button {
   float:left;
+  margin-right: 1%;
 }
 
 img {
-  width:100%;
-  height:auto;
+  width:90%;
+  height:90%;
 }
 
+* {
+  padding: 0.3%;
+}
 
