--- a/frontend/src/src/app/downloads-view/downloads-view.component.html
+++ b/frontend/src/src/app/downloads-view/downloads-view.component.html
@@ -12,7 +12,7 @@
     ></app-card>
   <app-card
     title="Nice utility"
-    content = "This is a utility for my awesome game, I hope everyone loves it!"
+    content = "This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website. This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website. This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website. This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website. This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website. This is a utility for my awesome game, I hope everyone loves it! There's so much to say about this one since it's a complicated utility, which lets me see how the line overflow clamp feature works on the website."
     [url]="'https://github.com'"
     ></app-card>
 </div>
