--- a/frontend/src/src/app/card/card.component.css
+++ b/frontend/src/src/app/card/card.component.css
@@ -10,16 +10,10 @@
 
 .major {
   background-color: #e9e9ed;
-  align: left;
-  text-align: left;
-  margin: 1%;
+  display: inline-block;
 
-  display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
+
 
 .spacer {
   padding-top:1%;
