--- a/frontend/src/src/app/home-button/home-button.component.html
+++ b/frontend/src/src/app/home-button/home-button.component.html
@@ -1,3 +1,3 @@
-<button (click)="homeButtonClicked()" [ngStyle]="{'font-weight': navigationIndexEndpoint === 0 ? 'bold' : 'normal'}">
+<button (click)="homeButtonClicked()" [ngStyle]="{'font-weight': navigationIndexEndpoint === 0 ? 'bold' : 'normal'}" title = "Home">
   Home
 </button>
