--- a/frontend/src/src/app/menu/menu.component.css
+++ b/frontend/src/src/app/menu/menu.component.css
@@ -7,6 +7,7 @@
 * {
   font-family: Roboto;
   padding: 0.3%;
+  font-size: 140%;
 }
 
 div {
@@ -35,6 +36,16 @@ button:hover {
 }
 
 .p {
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.r {
+  border-top: 1px solid lightgray;
+  border-bottom: 1px solid lightgray;
+}
+
+.n {
   border-top: 1px solid lightgray;
   border-bottom: 1px solid lightgray;
 }
