Added Archive view

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="navspacer"></div>
 <div class="title">
-  Brainbox
+  tinyBlog
 </div>
 <div class="navspacer"></div>
 <ul class="navbar">
@@ -13,13 +13,23 @@
     </app-articles-button>
   </li>
   <li>
+    <app-archive-button>
+    </app-archive-button>
+  </li>
+  <li>
     <app-downloads-button>
     </app-downloads-button>
   </li>
 </ul>
 <div class="spacer"></div>
+<div class="mainpage">
+<app-home-view>
+</app-home-view>
 <app-articles-view>
 </app-articles-view>
+<app-archive-view>
+</app-archive-view>
 <app-downloads-view>
 </app-downloads-view>
+</div>
 
