--- a/frontend/src/app/card/card.component.html
+++ b/frontend/src/app/card/card.component.html
@@ -1,7 +1,9 @@
-<div class='padding'>
-  <a href="">
-    <img src="assets/download_logo.png">
-  </a>
-  <div class='major'>{{title}}:{{content}}</div>
-</div>
+  <div class='major'>
+    <button (click)="openExternalLink()">
+      <img src="assets/download_logo.png">
+    </button>
+    <div class='text'>
+      {{title}}: {{content}}
+    </div>
+  </div>
 <div class='spacer'></div>
