--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -8,7 +8,8 @@
   font-family: Roboto;
   font-size: 200%;
   text-align: center;
-  background-color: lightgrey;
+  color: #303030;
+  background-color:#4298b5;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
   -khtml-user-select: none;
@@ -31,21 +32,30 @@ li {
   font-family: Roboto;
   font-size: 150%;
   text-align: center;
-  background-color: lightgrey;
+  background-color:#4298b5;
   padding-bottom: 1%;
+  border-bottom: 0px solid lightgray;
+  box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
+  position: relative;
 }
 
 
 .spacer {
   padding-top:1%;
+  background-color:#ffffff;
 }
 
 .navspacer {
   padding-top:1%;
-  background-color: lightgrey;
+  background-color:#4298b5;
 }
 
 ::ng-deep * {
   margin:0;
   padding:0;
 }
+
+.mainpage {
+  background-color:#ffffff;
+}
+
