--- a/frontend/src/app/archive-button/archive-button.component.css
+++ b/frontend/src/app/archive-button/archive-button.component.css
@@ -5,30 +5,16 @@ span {
 
 button {
   font-size: 100%;
-  border: 0px;
   color: white;
+  border: 0px;
   background-color:#4298b5;
   padding-left: 1%;
   padding-right:1%;
   box-sizing: border-box;
   width: 110px;
+  text-align:center;
 }
 
 button:hover {
   color: chocolate;
 }
-
-/*
-button::before {
-  font-size: 100%;
-  border: 0px;
-  background-color: #e9e9ed;
-  padding-left: 1%;
-  padding-right: 1%;
-  font-weight:bold;
-  content: attr(title);
-  height: 0;
-  overflow: hidden;
-  visibility: hidden;
-}
-*/
