--- a/frontend/src/app/articles-button/articles-button.component.html
+++ b/frontend/src/app/articles-button/articles-button.component.html
@@ -1,3 +1,3 @@
-<button (click)="articlesButtonClicked()" [ngStyle]="{'font-weight': navigationIndexEndpoint === 1 ? 'bold' : 'normal'}">
+<button (click)="articlesButtonClicked()" [ngStyle]="{'font-weight': navigationIndexEndpoint === 1 ? 'bold' : 'normal'}" title = "Articles">
   Articles
 </button>
