--- a/frontend/src/app/articles-view/articles-view.component.html
+++ b/frontend/src/app/articles-view/articles-view.component.html
@@ -1,12 +1,14 @@
 <div *ngIf="navigationIndexEndpoint===1">
-<div class="spacer"></div>
-<div *ngFor="let post of posts">
-  <h2>{{post.title}}</h2>
-  <p>{{post.postedDate}}</p>
-  <p>{{post.category}}</p>
-  <p [innerHTML]="post.content"></p>
-</div>
-<app-entry></app-entry>
-<app-entry></app-entry>
-<app-entry></app-entry>
+  <div class="spacer"></div>
+  <!--div *ngFor="let category of categories">
+    <button (click)="changeCategory(category)">{{category}}</button>
+  </div-->
+  <app-menu></app-menu>
+  <div>
+    <h2>{{activePost.title}}</h2>
+    <p>{{activePost.postedDate | date: 'MMMM d, y'}}</p>
+    <p>{{activePost.category}}</p>
+    <pre><p [innerHTML]="activePost.content"></p></pre>
+  </div>
+  <app-menu></app-menu>
 </div>
