--- a/frontend/src/app/downloads-button/downloads-button.component.css
+++ b/frontend/src/app/downloads-button/downloads-button.component.css
@@ -5,11 +5,13 @@ span {
 
 button {
   font-size: 100%;
-  /*flex: 1;*/
+  color: white;
   border: 0px;
-  background-color:lightgrey;
+  background-color:#4298b5;
   padding-left: 1%;
   padding-right:1%;
+  box-sizing: border-box;
+  width: 160px;
 }
 
 button:hover {
