--- a/frontend/src/app/home-button/home-button.component.css
+++ b/frontend/src/app/home-button/home-button.component.css
@@ -5,13 +5,30 @@ span {
 
 button {
   font-size: 100%;
-  /*flex: 1;*/
   border: 0px;
-  background-color:lightgrey;
+  color: white;
+  background-color:#4298b5;
   padding-left: 1%;
   padding-right:1%;
+  box-sizing: border-box;
+  width: 100px;
 }
 
 button:hover {
   color: chocolate;
 }
+
+/*
+button::before {
+  font-size: 100%;
+  border: 0px;
+  background-color: #e9e9ed;
+  padding-left: 1%;
+  padding-right: 1%;
+  font-weight:bold;
+  content: attr(title);
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+*/
